Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
         </ul>
       </header>
       <section>
-        <p>MultiMiner is a GUI front-end for <a href="https://github.com/ckolivas/cgminer">cgminer</a> and <a href="https://github.com/luke-jr/bfgminer">bfgminer</a> that simplifies switching individal devices - GPUs, ASICs, etc. - between crypto-currencies.</p>
+        <p>MultiMiner is a GUI front-end for <a href="https://github.com/ckolivas/cgminer">cgminer</a> and <a href="https://github.com/luke-jr/bfgminer">bfgminer</a> that simplifies switching individal devices - GPUs, ASICs, FPGAs, etc. - between crypto-currencies.</p>
 
-<p>MultiMiner will automatically download and install either cgminer, bfgminer, or both.</p>
-
-<p><img src="https://github.com/nwoolls/MultiMiner/raw/master/Screenshots/No%20Miners%20Prompt.png" alt="No Miners Prompt" title="No Miners Prompt"></p>
-
-<p><img src="https://github.com/nwoolls/MultiMiner/raw/master/Screenshots/Downloading%20and%20Installing%20Cgminer.png" alt="Downloading and Installing Cgminer" title="Downloading and Installing Cgminer"></p>
+<p><img src="https://github.com/nwoolls/MultiMiner/raw/master/Screenshots/Main%20Screen.png" alt="Main Screen" title="Main Screen"></p>
 
 <p>MultiMiner uses the underlying mining engine (cgminer by default) to detect available mining devices.</p>
 
-<p><img src="https://github.com/nwoolls/MultiMiner/raw/master/Screenshots/Main%20Screen.png" alt="Main Screen" title="Main Screen"></p>
+<p><img src="https://github.com/nwoolls/MultiMiner/raw/master/Screenshots/No%20Miners%20Prompt.png" alt="No Miners Prompt" title="No Miners Prompt"></p>
+
+<p>MultiMiner will automatically download and install either cgminer, bfgminer, or both.</p>
+
+<p><img src="https://github.com/nwoolls/MultiMiner/raw/master/Screenshots/Downloading%20and%20Installing%20Cgminer.png" alt="Downloading and Installing Cgminer" title="Downloading and Installing Cgminer"></p>
 
 <p>You can then use the UI to configure individual crypto-currencies and their pools, including support for load balancing.</p>
 
