Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
 
 <p><img src="https://github.com/nwoolls/MultiMiner/raw/master/Screenshots/Main%20Screen.png" alt="Main Screen" title="Main Screen"></p>
 
+<p>For new users, MultiMiner includes a Getting Started wizard that walks you through selecting an engine, a coin, a pool, and configuring <a href="http://www.mobileminerapp.com">MobileMiner</a>.</p>
+
+<p><img src="https://github.com/nwoolls/MultiMiner/raw/master/Screenshots/Getting%20Started.png" alt="Getting Started" title="Getting Started"></p>
+
 <p>MultiMiner will automatically download and install the latest version of either cgminer, <a href="https://github.com/luke-jr/bfgminer">bfgminer</a>, or both, making it simple for the new user to get started.</p>
 
 <p><img src="https://github.com/nwoolls/MultiMiner/raw/master/Screenshots/No%20Miners%20Prompt.png" alt="No Miners Prompt" title="No Miners Prompt"></p>
@@ -123,6 +127,15 @@
 <li>
 <strong>MultiMiner.Win</strong> is the Windows Forms application</li>
 </ul><h2>
+<a name="hardare-donations" class="anchor" href="#hardare-donations"><span class="octicon octicon-link"></span></a>Hardare Donations</h2>
+
+<p>To those who may be considering making donations: instead of BTC or LTC I'd very much welcome <strong>any sort of mining hardware</strong>. I'm not talking nasty rigs and I absolutely <strong>do not</strong> expect this. However, several bugs submitted by users have been due to hardware setups that I could not reproduce myself, such as FPGAs or having 10 devices in a single rig.</p>
+
+<p>So if you are thinking of donating but also have some old FPGA that isn't doing much for you with the current Bitcoin difficulty, or some Erupters, or really anything at all that would help me test different hardware setups that would rock. It's <em>way</em> easier to fix issues when I can actually reproduce them myself so this is a <em>very</em> good way to give back.</p>
+
+<p>Again this <strong>not</strong> expected at all. The best thing you can do is let me know the details of any errors you have so I can fix them for everyone.</p>
+
+<h2>
 <a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h2>
 
 <p>Copyright (C) 2013 Nathanial Woolls</p>
