Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </ul>
       </header>
       <section>
-        <p><strong>MultiMiner</strong> is a graphical application for crypto-coin mining on Windows, OS X and Linux. MultiMiner simplifies switching individal devices (GPUs, ASICs, FPGAs) between crypto-currencies such as Bitcoin and Litecoin.</p>
+        <p><strong>MultiMiner</strong> is a graphical application for crypto-coin mining on Windows, OS X and Linux. MultiMiner simplifies switching individual devices (GPUs, ASICs, FPGAs) between crypto-currencies such as Bitcoin and Litecoin.</p>
 
 <p>MultiMiner uses the underlying mining engine (<a href="https://github.com/ckolivas/cgminer">cgminer</a> by default) to detect available mining devices and then presents a user interface for selecting the coins you'd like to mine.</p>
 
@@ -61,6 +61,8 @@
 <p>Finally, MultiMiner supports <a href="http://www.mobileminerapp.com">MobileMiner</a>, an open API with mobile apps for remotely monitoring and controlling your rigs.</p>
 
 <p><img src="https://github.com/nwoolls/MultiMiner/raw/master/Screenshots/MobileMiner.png" alt="MobileMiner" title="MobileMiner"></p>
+
+<p><img src="https://github.com/nwoolls/MultiMiner/raw/master/Screenshots/MobileMiner%20-%20Android.png" alt="MobileMiner - Android" title="MobileMiner - Android"></p>
 
 <p>By entering your MobileMiner email address and application key in the Configure Settings dialog, you will be able to remotely monitor and control your rigs <em>without having to open any firewalls or forward any ports</em>.</p>
 
@@ -159,7 +161,7 @@ sudo apt-get install bfgminer
 <li>
 <strong>MultiMiner.Win</strong> is the Windows Forms application</li>
 </ul><h2>
-<a name="hardare-donations" class="anchor" href="#hardare-donations"><span class="octicon octicon-link"></span></a>Hardare Donations</h2>
+<a name="hardware-donations" class="anchor" href="#hardware-donations"><span class="octicon octicon-link"></span></a>Hardware Donations</h2>
 
 <p>To those who may be considering making donations: instead of BTC or LTC I'd very much welcome <strong>any sort of mining hardware</strong>. I'm not talking nasty rigs and I absolutely <strong>do not</strong> expect this. However, several bugs submitted by users have been due to hardware setups that I could not reproduce myself, such as FPGAs or having 10 devices in a single rig.</p>
 
