Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
 
 <p><img src="https://github.com/nwoolls/MultiMiner/raw/master/Screenshots/Settings.png" alt="Settings" title="Settings"></p>
 
+<p>You can also use the interface provided by MultiMiner to adjust advanced settings such as API white-listing, disabling GPU mining, and automatically adjusting mining intensity based on the computer's idle time.</p>
+
+<p><img src="https://github.com/nwoolls/MultiMiner/raw/master/Screenshots/Advanced%20Miner%20Settings.png" alt="Advanced Miner Settings" title="Advanced Miner Settings"></p>
+
 <p>Finally, MultiMiner supports <a href="http://www.mobileminerapp.com">MobileMiner</a>, an open API with mobile apps for remotely monitoring and controlling your rigs.</p>
 
 <p><img src="https://github.com/nwoolls/MultiMiner/raw/master/Screenshots/MobileMiner.png" alt="MobileMiner" title="MobileMiner"></p>
