Clarify downloads - link to Releases

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
 
         <ul>
-          <li><a href="https://github.com/nwoolls/MultiMiner/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/nwoolls/MultiMiner/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/nwoolls/MultiMiner/releases">Download <strong>Releases</strong></a></li>
+          <li><a href="https://github.com/nwoolls/MultiMiner/zipball/master">Download <strong>Source</strong></a></li>
           <li><a href="https://github.com/nwoolls/MultiMiner">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
