--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <p><img src="https://github.com/nwoolls/MultiMiner/raw/master/Screenshots/Getting%20Started.png" alt="Getting Started" title="Getting Started"></p>
 
-<p>MultiMiner will automatically download and install the latest version of either <a href="https://github.com/luke-jr/bfgminer">bfgminer</a>, making it simple for the new user to get started.</p>
+<p>MultiMiner will automatically download and install the latest version of <a href="https://github.com/luke-jr/bfgminer">bfgminer</a>, making it simple for the new user to get started.</p>
 
 <p><img src="https://github.com/nwoolls/MultiMiner/raw/master/Screenshots/Downloading%20and%20Installing%20Bfgminer.png" alt="Downloading and Installing Cgminer" title="Downloading and Installing Cgminer"></p>
 
