Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
 
         <ul>
-          <li><a href="https://github.com/nwoolls/MultiMiner/releases">Download <strong>Releases</strong></a></li>
-          <li><a href="https://github.com/nwoolls/MultiMiner/zipball/master">Download <strong>Source</strong></a></li>
+          <li><a href="https://github.com/nwoolls/MultiMiner/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/nwoolls/MultiMiner/tarball/master">Download <strong>TAR Ball</strong></a></li>
           <li><a href="https://github.com/nwoolls/MultiMiner">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
@@ -78,6 +78,17 @@
 <p>You can download installers and zip files for Windows, OS X, Linux and Mono on the <a href="https://github.com/nwoolls/MultiMiner/releases">GitHub Releases page</a>.</p>
 
 <h2>
+<a name="drivers" class="anchor" href="#drivers"><span class="octicon octicon-link"></span></a>Drivers</h2>
+
+<p>Depending on your OS and the mining devices you plan on using you will need one or more of the following drivers / kernel extensions installed:</p>
+
+<ul>
+<li><a href="http://www.silabs.com/products/mcu/pages/usbtouartbridgevcpdrivers.aspx">Block Erupter</a></li>
+<li><a href="https://bitcointalk.org/index.php?topic=319419.0">Blue / Red Fury</a></li>
+<li><a href="http://www.ftdichip.com/Drivers/VCP.htm">BFL / Bitforce</a></li>
+<li><a href="http://zadig.akeo.ie/">HashBuster Micro</a></li>
+<li><a href="http://support.amd.com/en-us/download">AMD GPU</a></li>
+</ul><h2>
 <a name="windows-installation" class="anchor" href="#windows-installation"><span class="octicon octicon-link"></span></a>Windows Installation</h2>
 
 <ol>
@@ -85,7 +96,8 @@
 </ol><p>The installer runs without needing admin rights and does not install to Program Files so as not to be intrusive. However, if you prefer you can use the zip file:</p>
 
 <ol>
-<li>Download and extract the .zip file at the above link</li>
+<li>Download and extract the .zip file at the <a href="https://github.com/nwoolls/MultiMiner/releases">GitHub Releases page</a>
+</li>
 <li>Launch MultiMiner.Win.exe to get started</li>
 </ol><h2>
 <a name="os-x-installation" class="anchor" href="#os-x-installation"><span class="octicon octicon-link"></span></a>OS X Installation</h2>
@@ -95,7 +107,8 @@
 </li>
 <li>Install the latest version of <a href="http://www.mono-project.com/Main_Page">Mono</a>
 </li>
-<li>Download and extract the <strong>.app</strong>.zip file at the above Downloads link</li>
+<li>Download and extract the <strong>.app</strong>.zip file at the <a href="https://github.com/nwoolls/MultiMiner/releases">GitHub Releases page</a>
+</li>
 <li>Launch MultiMiner.app to get started</li>
 </ol><p>MultiMiner will automatically download redistributable binaries of bfgminer from the <a href="http://xgminer.com">xgminer-osx</a> project.</p>
 
@@ -119,7 +132,7 @@ sudo apt-get update
 sudo apt-get install bfgminer
 </code></pre>
 </li>
-<li><p>Download and extract the .zip file at the above Downloads link</p></li>
+<li><p>Download and extract the .zip file at the <a href="https://github.com/nwoolls/MultiMiner/releases">GitHub Releases page</a></p></li>
 <li>
 <p>Run MultiMiner.Win.exe using mono:</p>
 
@@ -132,7 +145,8 @@ sudo apt-get install bfgminer
 <a name="generic-mono-installation" class="anchor" href="#generic-mono-installation"><span class="octicon octicon-link"></span></a>Generic Mono Installation</h2>
 
 <ol>
-<li>Download and extract the zip file at the above Downloads link</li>
+<li>Download and extract the zip file at the <a href="https://github.com/nwoolls/MultiMiner/releases">GitHub Releases page</a>
+</li>
 <li>Install bfgminer. For OS X, you can find packages and for doing so <a href="http://homebrew.xgminer.com">here</a> and instructions for using them <a href="http://howto.xgminer.com">here</a>.</li>
 <li>Install X11. Under OS X you should install Xquartz available <a href="http://xquartz.macosforge.org/">here</a>.</li>
 <li>Install the latest version of <a href="http://www.mono-project.com/Main_Page">Mono</a>.</li>
