Updated link for the BF1 Windows driver

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
 <ul>
 <li><a href="http://www.silabs.com/products/mcu/pages/usbtouartbridgevcpdrivers.aspx">Block Erupter</a></li>
-<li><a href="https://bitcointalk.org/index.php?topic=319419.0">Blue / Red Fury</a></li>
+<li><a href="http://minecoin.net/bluefuryredfury-driver-for-windows/">Blue / Red Fury</a></li>
 <li><a href="http://www.ftdichip.com/Drivers/VCP.htm">BFL / Bitforce</a></li>
 <li><a href="http://zadig.akeo.ie/">HashBuster Micro</a></li>
 <li><a href="http://support.amd.com/en-us/download">AMD GPU</a></li>
