Added a link to Bi•Fury drivers

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 <li><a href="http://minecoin.net/bluefuryredfury-driver-for-windows/">Blue / Red Fury</a></li>
 <li><a href="http://www.ftdichip.com/Drivers/VCP.htm">BFL / Bitforce</a></li>
 <li><a href="http://zadig.akeo.ie/">HashBuster Micro</a></li>
+<li><a href="http://store.bitcoin.org.pl/support">Bi•Fury</a></li>
 <li><a href="http://support.amd.com/en-us/download">AMD GPU</a></li>
 </ul><h2>
 <a name="windows-installation" class="anchor" href="#windows-installation"><span class="octicon octicon-link"></span></a>Windows Installation</h2>
