Reference new forums

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ sudo apt-get install bfgminer
 </ol><h2>
 <a name="support" class="anchor" href="#support"><span class="octicon octicon-link"></span></a>Support</h2>
 
-<p>The official forum thread for MultiMiner can be found <a href="http://thread.multiminerapp.com">here</a>.</p>
+<p>The official forums for MultiMiner can be found <a href="http://talk.multiminerapp.com">here</a>.</p>
 
 <h2>
 <a name="source-code" class="anchor" href="#source-code"><span class="octicon octicon-link"></span></a>Source Code</h2>
