--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ sudo apt-get install bfgminer
 
 <p>So if you are thinking of donating but also have some old FPGA that isn't doing much for you with the current Bitcoin difficulty, or some Erupters, or really anything at all that would help me test different hardware setups that would rock. It's <em>way</em> easier to fix issues when I can actually reproduce them myself so this is a <em>very</em> good way to give back.</p>
 
-<p>Again this <strong>not</strong> expected at all. The best thing you can do is let me know the details of any errors you have so I can fix them for everyone.</p>
+<p>Again this is <strong>not</strong> expected at all. The best thing you can do is let me know the details of any errors you have so I can fix them for everyone.</p>
 
 <h2>
 <a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h2>
